# test-sandbox

./: .env  .gitignore  CLAUDE.md  agent.back  agent.py  log.txt  log1.txt  main.py  mcp_config.json  pyproject.toml  sandbox_backend.py  skills-lock.json  test1.py
Skills/alibabacloud-solution-deploy/: SKILL.md
Skills/deep-research/: SKILL.md
Skills/github-trending/: SKILL.md
Skills/github-trending/scripts/: fetch_trending.py
Skills/smtp-email/: SKILL.md
Skills/smtp-email/scripts/: send_email.py  smtp_config.json
agent_files/: notes.txt
docs/agents/: issue-tracker.md  triage-labels.md
